syntax = "proto3";
option csharp_namespace = "TestPackage";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "protobuf-net/bcl.proto";

enum TestEnum
{
  None = 0;
  OptionA = 1;
  OptionB = 2;
}

message TestMessage
{
  string StringField = 1;
  int32 Int32Field = 2;
  repeated int32 Int32ArrayField = 3;
  repeated string StringArrayField = 4;
  bytes BytesField = 5;
  bool BoolField = 6;
  double DoubleField = 7;
  float FloatField = 8;
  int64 Int64Field = 9;
  uint32 UInt32Field = 10;
  uint64 UInt64Field = 11;
  sint32 SInt32Field = 12;
  sint64 SInt64Field = 13;
  fixed32 Fixed32Field = 14;
  fixed64 Fixed64Field = 15;
  sfixed32 SFixed32Field = 16;
  sfixed64 SFixed64Field = 17;
  map<string, TestMessage> MapField = 18;
  TestEnum EnumField = 19;
  repeated TestEnum EnumArrayField = 20;
  TestMessage NestedMessageField = 21;
  repeated TestMessage NestedMessageArrayField = 22;
  google.protobuf.Timestamp TimestampField = 27;
  google.protobuf.Duration DurationField = 28;
  map<string, string> MapField2 = 29;
  map<sfixed32, sint64> MapField4 = 50;
  .bcl.DateTime DateTimeField = 51;
  int32 NullableIntField = 52;
  repeated int32 IntArrayFieldTest = 53;
  repeated string StringListFieldTest = 54;
  repeated string StringArrayFieldTest = 55;
  repeated int32 IntListFieldTest = 56;
  map<string, string> MapField5 = 57;
  map<string, string> MapField6 = 58;
  int32 RequiredIntField = 59;
  map<string, TestMessage> MapField7 = 60;
  repeated string StringSetFieldTest = 61;
  repeated string StringQueueFieldTest = 62;
  repeated string StringStackFieldTest = 63;
  repeated string ConcurrentStringQueueFieldTest = 64;
  repeated string ConcurrentStringStackFieldTest = 65;
  repeated int32  IntList = 66;
  repeated string StringISet = 67;
  .bcl.TimeSpan TimeSpanField = 68;
  int32 DateOnlyField = 69;
  .bcl.Guid GuidField = 70;
  int64 TimeOnlyField = 71 ;
  string  StringBuilderField = 72;
}

message TestType
{
  string Name = 1;
  int32 Value = 2;
}
message Test2Message {
  repeated KeyValuePair_Int32_Dictionary_Int32_String Property = 1;
}
message KeyValuePair_Int32_Dictionary_Int32_String {
  int32 Key = 1;
  map<int32,string> Value = 2;
}

message TestArrayMessage
{
  repeated int32 Items = 1 [packed=false];
}